--- a/Accelist.AuthGateway/appsettings.json
+++ b/Accelist.AuthGateway/appsettings.json
@@ -48,9 +48,7 @@
       "address",
       "email",
       "phone",
-      "profile",
-      "identity-management",
-      "app"
+      "profile"
     ]
   }
 }
